added cool fire gif to the website

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>User name</h1>
+    <h1>Welcome to my web sight</h1>
+    <div></div>
+    <img src="http://img4.wikia.nocookie.net/__cb20130614161535/camphalfbloodroleplay/images/a/a5/Fire.gif" alt="cool fire gif">
 </body>
 </html>
